--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,21 @@
     font-family: 'League Spartan', sans-serif;
 }
 
-.container {
+body {
+    min-height: 100vh;
+    background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+/* .container {
     width: 100vw;
     min-height: 100vh;
-    /* background-image: url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg");
-    background-size: 50%, 100%;
-    background-repeat: no-repeat;
-    background-position: top bottom; */
     background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
     background-position: top left, bottom right;
     background-repeat: no-repeat
-}
+} */
 
 #ratings {
     width: 80%;
@@ -109,13 +113,13 @@
 }
 
 @media screen and (max-width: 450px) {
-    .container {
+    /* .container {
         background-image: url(images/bg-pattern-top-mobile.svg),
             url(images/bg-pattern-bottom-mobile.svg);
         background-position: top, bottom;
         background-repeat: no-repeat;
         background-size: 100%;
-    }
+    } */
 
     #ratings {
         width: 90%;
